sandc/test/fixtures/astRegression/shouldSucceed/productions/classDeclaration/ClassImplements.sand
pub class ClassImplements implements Foo, Bar<Baz>, Qux {

}