sandc/test/fixtures/astRegression/shouldFail/productions/literalExpression/MethodInvocationAngleBracketsWithoutTypeParams.sand
pub class MethodInvocationAngleBracketsWithoutTypeParams {
    foo() {
        foo<>()
    }
}